--- a/02-基本元素/01-阶段性练习01.html
+++ b/02-基本元素/01-阶段性练习01.html
@@ -8,7 +8,8 @@
 	<h1>英雄联盟（电子竞技类游戏）</h1>
 	<strong>《英雄联盟》</strong>(简称LOL)是由美国拳头游戏(<i>Riot Games</i>)开发、中国大陆地区腾讯游戏代理运营的英雄对战MOBA竞技网游。<br>
 	游戏里拥有数百个个性英雄，并拥有排位系统、符文系统等特色养成系统。[<ins>1</ins>]<br>
-	<strong>《英雄联盟》</strong>还致力于推动全球电子竞技的发展，除了联动各赛区发展职业联赛、打造电竞体系之外，每年还会举办“季中冠军赛”“全球总决赛”“All Star全明星赛”三大世界级赛事，获得了亿万玩家的喜爱，形成了自己独有的电子竞技文化。 <br> 
+	<strong>《英雄联盟》</strong>还致力于推动全球电子竞技的发展，除了联动各赛区发展职业联赛、打造电竞体系之外。<br>
+	每年还会举办“季中冠军赛”“全球总决赛”“All Star全明星赛”三大世界级赛事，获得了亿万玩家的喜爱，形成了自己独有的电子竞技文化。 <br> 
 	英雄联盟是一款多人竞技类游戏，于<del>2018</del>年加入亚运会。<br>
 	2019年11月21日，英雄联盟发布《关于违规玩家荣誉等级调低的公告》，违规玩家将被调低荣誉等级，取消其赛季奖励资格。[<ins>2</ins>]<br>
 </body>
